# FLM

./: .gitattributes  .gitignore  README.md  chat.py  chat_cpu.bat  chat_rtx4090.bat  chat_rtx4090.sh  pyproject.toml  requirements.txt  start.sh  train.ipynb  update_git.bat
carp_700m_ckpt/: carp_sft_args.json  config.json  tokenizer.json
carp_cpu_large_ckpt/: carp_sft_args.json  config.json
configs/: carp_700m.json  carp_cpu_large.json  carp_micro.json  colab_medium.json  colab_small.json  cpu_1b_moe_fast.json  micro.json  moe_cpu_large.json  tiny.json
cpu_lite_lm/: __init__.py  benchmark.py  carp.py  carp_data.py  carp_train.py  configuration_cpu_lite.py  data.py  eval_reasoning.py  export.py  generate.py  helix_benchmark.py  helix_data.py  helix_runtime.py  helix_train.py  inspect_data.py  modeling_cpu_lite.py  quantize.py  reasoning_data.py  sft_data.py  speculative.py  tokenizer_train.py  train.py  train_reasoning_sft.py  train_sft.py  train_verifier.py
docs/: CARP_IMPLEMENTATION.md
keural_sft_ckpt/: config.json  sft_args.json
rtx4090_max_ckpt/: config.json  training_args.json
scripts/: add_carp_tokens.py  benchmark_cpu.py  benchmark_helix.py  carp_generate.py  carp_language_infer.py  convert_helix_data.py  download_carp_language.py  download_keural_sft.py  download_korean_webtext.py  eval_carp_language_answer.py  eval_carp_router.py  generate_colab.py  generate_micro.py  inspect_korean_webtext.py  make_carp_synthetic.py  prepare_700m_dataset.py  prepare_carp_sft.py  prepare_helix_data.py  prepare_reasoning_artifacts.py  quantize_dynamic.py  (+20 more)
(+14 files in other folders)
